--- a/package.json
+++ b/package.json
@@ -44,22 +44,36 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "^4.0.20",
     "@tanstack/react-query": "^5.60.5",
+    "@types/connect-pg-simple": "^7.0.3",
+    "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
+    "@types/node": "^22.10.6",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
+    "@types/ws": "^8.5.13",
     "@vercel/blob": "^2.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.6.1",
     "embla-carousel-react": "^8.5.1",
+    "esbuild": "^0.24.2",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^12.0.3",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.4.4",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-day-picker": "^9.4.4",
     "react-dom": "^18.3.1",
@@ -68,32 +82,17 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^4.0.20",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.2",
     "tw-animate-css": "^1.4.0",
+    "typescript": "^5.7.2",
     "vaul": "^1.1.2",
+    "vite": "^6.0.7",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.1",
     "zod-validation-error": "^3.4.0"
   },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.0.20",
-    "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "^5.0.0",
-    "@types/express-session": "^1.18.1",
-    "@types/node": "^22.10.6",
-    "@types/react": "^18.3.17",
-    "@types/react-dom": "^18.3.5",
-    "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.31.4",
-    "esbuild": "^0.24.2",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^4.0.20",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.7"
-  }
+  "devDependencies": {}
 }
