--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build:frontend",
+    "buildCommand": "npm run build",  ✅ CONSTRUIT FRONTEND + BACKEND
   "installCommand": "npm install",
   "outputDirectory": "dist/public",
   "rewrites": [
